Data Transfer No Longer Working #63660

Closed
opened 2019-04-16 14:23:10 +02:00 by New user · 12 comments

System Information
Operating system: Windows 10
Graphics card: Nvidia GTX 970

Blender Version
Broken: 2.8 blender-2.80-edc1b0167518-win64
Worked: (optional)

I usually use the Data Transfer modifier for my normal editing, but it is no longer transfering my normals from one object to another.

Exact steps for others to reproduce the error
I created a test file in which I have a cube, a sun lamp, and a plane. I have the plane pointing away from the light source so I could set the cube to always be shadowed when I applied the data transfer modifer using the shadow vertex group. However, it's behaving like none of the normals were transfered. I even parented my plane to the light source so it will always be shadowed.

Here's the example file
normaltestreplicate.blend

**System Information** Operating system: Windows 10 Graphics card: Nvidia GTX 970 **Blender Version** Broken: 2.8 blender-2.80-edc1b0167518-win64 Worked: (optional) I usually use the Data Transfer modifier for my normal editing, but it is no longer transfering my normals from one object to another. **Exact steps for others to reproduce the error** I created a test file in which I have a cube, a sun lamp, and a plane. I have the plane pointing away from the light source so I could set the cube to always be shadowed when I applied the data transfer modifer using the shadow vertex group. However, it's behaving like none of the normals were transfered. I even parented my plane to the light source so it will always be shadowed. Here's the example file [normaltestreplicate.blend](https://archive.blender.org/developer/F6951354/normaltestreplicate.blend)
Author

Added subscriber: @Daitomodachi

Added subscriber: @Daitomodachi

Added subscriber: @ZedDB

Added subscriber: @ZedDB

Has it worked before in 2.8?

Has it worked before in 2.8?
Author

Prior to April 1st update, yes.

Also there have been reports of this not working in the past
https://developer.blender.org/T62528
https://developer.blender.org/rBbcc66136c2745b9d047fc5540c7b6b247855955f

Prior to April 1st update, yes. Also there have been reports of this not working in the past https://developer.blender.org/T62528 https://developer.blender.org/rBbcc66136c2745b9d047fc5540c7b6b247855955f

I rolled back as far as March 1st and the result is still the same. Additionally, I appended the files into 2.79 and the result is still the same there too. So I think you will have to provide a better example that works in 2.79 too.

I rolled back as far as March 1st and the result is still the same. Additionally, I appended the files into 2.79 and the result is still the same there too. So I think you will have to provide a better example that works in 2.79 too.
Author

Here's a video showing the problem. Hope it better illustrates the problems I'm having{F6951706}

Here's a video showing the problem. Hope it better illustrates the problems I'm having{[F6951706](https://archive.blender.org/developer/F6951706/2019-04-16_10-07-10.mp4)}
Author

Realized I was in solid mode for 2.79 but still shows the issue I'm having{F6951713}

Realized I was in solid mode for 2.79 but still shows the issue I'm having{[F6951713](https://archive.blender.org/developer/F6951713/2019-04-16_10-12-13.mp4)}
Author

In #63660#661817, @ZedDB wrote:
I rolled back as far as March 1st and the result is still the same. Additionally, I appended the files into 2.79 and the result is still the same there too. So I think you will have to provide a better example that works in 2.79 too.

I posted a video showing the issue I'm having. Please let me know if that's not specific enough

> In #63660#661817, @ZedDB wrote: > I rolled back as far as March 1st and the result is still the same. Additionally, I appended the files into 2.79 and the result is still the same there too. So I think you will have to provide a better example that works in 2.79 too. I posted a video showing the issue I'm having. Please let me know if that's not specific enough
Author

Also, it works with Febrary 28th, 2019 build as shown in this video{F6952454}

untitledtesasfa.blend

Also, it works with Febrary 28th, 2019 build as shown in this video{[F6952454](https://archive.blender.org/developer/F6952454/2019-04-16_16-02-58.mp4)} [untitledtesasfa.blend](https://archive.blender.org/developer/F6952457/untitledtesasfa.blend)
Bastien Montagne was assigned by Sebastian Parborg 2019-04-17 13:46:10 +02:00

Seems like it was 605749ffaa that broke this.

Seems like it was 605749ffaa that broke this.

This issue was referenced by 8973d1e769

This issue was referenced by 8973d1e7697c8272ba15aa7ecb79f0de66930086

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63660
No description provided.