Fix T63660: Data Transfer of normals No Longer Working.

Logic about computing of poly normals in final stage of modifier stack
evaluation was broken, giving also wrong loop normals.